fix: show correct border animation on safari

--- a/src/components/Contact/style.module.scss
+++ b/src/components/Contact/style.module.scss
@@ -1,5 +1,5 @@
 /* stylelint-disable-next-line plugin/sass-render-errors */
-@import "custom-border-mixin";
+@import "@/styles/mixin";
 
 .h2 {
   height: 1px;
@@ -33,33 +33,9 @@
   }
 }
 
-@keyframes border-animation {
-  from {
-    @include custom-border(
-      dashed($color: #000, $gap: 4px, $length: 10px, $side: all, $size: 2px)
-    );
-  }
-  to {
-    @include custom-border(
-      dashed(
-        $color: #000,
-        $gap: 4px,
-        $length: 10px,
-        $side: all,
-        $size: 2px,
-        $translate: true
-      )
-    );
-  }
-}
-
 .contactInner {
-  animation-direction: reverse;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-name: border-animation;
-  animation-timing-function: linear;
   color: #000;
+  @include border-animation;
   @include mq.mq($until: desktop) {
     border-radius: 6px;
     padding: 12px;
