--- a/src/components/Works/style.module.scss
+++ b/src/components/Works/style.module.scss
@@ -1,5 +1,6 @@
 /* stylelint-disable-next-line plugin/sass-render-errors */
 @import "custom-border-mixin";
+@import "@/styles/mixin";
 
 .h2 {
   height: 1px;
@@ -29,35 +30,11 @@
   }
 }
 
-@keyframes border-animation {
-  from {
-    @include custom-border(
-      dashed($color: #000, $gap: 4px, $length: 10px, $side: all, $size: 2px)
-    );
-  }
-  to {
-    @include custom-border(
-      dashed(
-        $color: #000,
-        $gap: 4px,
-        $length: 10px,
-        $side: all,
-        $size: 2px,
-        $translate: true
-      )
-    );
-  }
-}
-
 .itemInner {
-  animation-direction: reverse;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-name: border-animation;
-  animation-timing-function: linear;
   color: #000;
   display: grid;
   grid-template: auto / 100%;
+  @include border-animation;
   @include mq.mq($until: desktop) {
     border-radius: 6px;
     gap: 6px;
